--- a/capstone/reports/technical_report.ipynb
+++ b/capstone/reports/technical_report.ipynb
@@ -10,11 +10,11 @@
     "# Predicting literary success through writing style\n",
     "---\n",
     "## The Problem\n",
-    "Publishers and acquisition editors have a history of fancying themselves stylemakers or going with the gut when choosing what to publish. And as a result, publishers have followed the business model of operating in the red, while crossing fingers for another Dan Brown or E.L. James to pull them into the black with a runaway hit. When presented with the idea of doing market research or digging into the data, I've heard publishers dig in their heels and repeat the argument that success in the arts is unpredictable. \n",
+    "Publishers and acquisition editors have a history of fancying themselves stylemakers or going with the gut when choosing what to publish. And as a result, publishers have followed the business model of operating in the red, while crossing fingers for another Dan Brown or E.L. James to pull them into the black with a runaway hit. \n",
     "\n",
-    "As the big publishing house market shrinks, self-publishing competitors enter the field, and author advances stretch into the seven-digits, this business model is proving increasing less viable. And in this shifting landscape, the big houses are finally beginning to turn to data. Which presents the question, can the success of a novel be predicted?\n",
+    "As the big publishing house market shrinks, self-publishing competitors enter the field, and author advances stretch into the seven-digits, this business model is proving increasing less viable. And in this shifting landscape, the big houses are beginning to turn to data. Which presents the question, can the success of a novel be predicted?\n",
     "\n",
-    "Clearly, many variables of success are out of predictive bounds -- storyline novelty, fame of the author, social trends, world events. Here, we will focus soley on the structure of the writing style and whether stylistic structure can be used to predict success.\n",
+    "Clearly, many variables of success are out of predictive bounds -- storyline novelty, fame of the author, social trends, world events. Here, we will focus solely on the structure of the writing style and whether stylistic structure can be used to predict success.\n",
     "\n"
    ]
   },
@@ -742,7 +742,6 @@
    "source": [
     "### Topic modeling and n_grams\n",
     "\n",
-    "<font color='crimson'> % **Retune this a bit** % </font>\n",
     "\n",
     "I chose **TfidfVectorizer** for the 1_gram generation intending to identifying significant words common across best_sellers and flops. **LDA** for topic modeling was chosen for the same reason -- are there similar or repeated topics or subjects within each grouping?\n",
     "\n",
@@ -963,23 +962,6 @@
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<table style=\"border-collapse:collapse;border-spacing:0\"><col width=\"160\"><tr><th style=\"font-family:Arial, sans-serif;font-size:14px;font-weight:bold;padding:3px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal\" bgcolor='#72A6C6'>Highest success predictions</th><th style=\"font-family:Arial, sans-serif;font-size:14px;font-weight:bold;padding:3px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal\", bgcolor='#72A6C6'>Ending sentence(s)</th></tr><tr><td style=\"font-family:Arial, sans-serif;font-size:14px;padding:6px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;vertical-align:top\">Rainbow's End by Vernor Vinge</td><td style=\"font-family:Arial, sans-serif;font-size:14px;padding:6px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;vertical-align:top\">Hovering immanent all around him were the worlds of art and science that humankind was busy building. What if I can have it all?</td></tr><tr><td style=\"font-family:Arial, sans-serif;font-size:14px;padding:6px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;vertical-align:top\">See Me by Nicolas Sparks</td><td style=\"font-family:Arial, sans-serif;font-size:14px;padding:6px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;vertical-align:top\">The dew moistened the tips of her toes through her sandals and the moonlight reflected on the lawn like silver trails.</td></tr><tr><td style=\"font-family:Arial, sans-serif;font-size:14px;padding:6px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;font-weight:bold;vertical-align:top\", bgcolor='#72A6C6'>Highest flop predictions</td><td style=\"font-family:Arial, sans-serif;font-size:14px;padding:6px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;font-weight:bold;vertical-align:top\", bgcolor='#72A6C6'>Ending sentence(s)</td></tr><tr><td style=\"font-family:Arial, sans-serif;font-size:14px;padding:6px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;vertical-align:top\">Hell Ship by Philip Palmer</td><td style=\"font-family:Arial, sans-serif;font-size:14px;padding:6px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;vertical-align:top\">And then she burst into flame. Her body became a burning candle. And the same happened with each of the other Kaun; their bodily-energy turned on itself and their flesh became fire. And the candles burned till the flesh was all gone.</td></tr><tr><td style=\"font-family:Arial, sans-serif;font-size:14px;padding:6px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal\">Make it last by Megan Erickson</td><td style=\"font-family:Arial, sans-serif;font-size:14px;padding:6px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal\">I’m not saying it’s mature, but sometimes, when a guy wants a girl but knows he doesn’t have a shot? Well, he’s kind of a dick.</td></tr></table>\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
